--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+                      
+      - name: Upload a Build Artifact
+         
+        uses: actions/upload-artifact@v4.4.3
+        
       - name: Setup JDK 17
 
         uses: actions/setup-java@v4
