--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,27 +1,54 @@
-name:  Run  test
+name: Build & Deploy
+
 on:
-    pull_request:
-    branches: [main]
+  push:
+    branches:
+      - main
+
+env:
+  CI: false
+
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v2
 
-      - name: Setup JDK 17
-
-        uses: actions/setup-java@v4
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          distribution: 'temurin'
-          java-version: 17
-          cache: 'gradle'
+          node-version: 16
 
-      - name: Grant execute permissions for gradlew
-        run: chmod +x gradlew
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
 
-      - name: Run unit tests
-        run: ./gradlew clean testDebug
+      - name: Build project
+        run: npm run build
 
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v2
+        with:
+          name: production-files
+          path: ./build
 
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
 
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: production-files
+          path: ./build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.TOKEN }}
+          publish_dir: ./build
