--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,64 +4,44 @@ on:
   push:
     branches:
       - main
-
-env:
-  CI: false
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          node-version: 16
-            
-      - name: Upload a Build Artifact
-         
-        uses: actions/upload-artifact@v4.4.3
-        
-      - name: Setup JDK 23
+          java-version: '17'
 
-        uses: actions/setup-java@v4
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
         with:
-          distribution: 'temurin'
-          java-version: 23
-          cache: 'gradle'
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle
 
+      - name: Build APK
+        run: ./gradlew assembleRelease
 
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
-
-      - name: Build project
-        run: npm run build
-
-      - name: Upload production-ready build files
-        uses: actions/upload-artifact@v2
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
         with:
-          name: production-files
-          path: ./build
+          name: build-apk
+          path: app/build/outputs/apk/release/app-release.apk
 
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+      - name: Decode Keystore
+        run: echo "${{ secrets.KEYSTORE }}" | base64 --decode > app/keystore.jks
 
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: production-files
-          path: ./build
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.TOKEN }}
-          publish_dir: ./build
+      - name: Sign APK
+        run: ./gradlew assembleRelease -Pandroid.injected.signing.store.file=app/keystore.jks -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_PASSWORD }} -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }}
